tests/invalid/for_non_iterable/main.py
x: int = 5
for i in x:
    print(i)
